internal/dataplane/parser/testdata/golden/kongplugin-instance-name/default_golden.yaml
_format_version: "3.0"
plugins:
- config:
    header_name: kong-id
  instance_name: example-728157fcb
  name: correlation-id
  route: .httpbin.httpbin..80
  tags:
  - k8s-name:kong-id
  - k8s-kind:KongPlugin
  - k8s-group:configuration.konghq.com
  - k8s-version:v1
- config:
    header_name: kong-id
  instance_name: example-c1ebced53
  name: correlation-id
  route: .httpbin-other.httpbin..80
  tags:
  - k8s-name:kong-id
  - k8s-kind:KongPlugin
  - k8s-group:configuration.konghq.com
  - k8s-version:v1
- config:
    header_name: kong-id
  instance_name: example-b8a0ddb44
  name: correlation-id
  route: .httpbin-other.httpbin-other..80
  tags:
  - k8s-name:kong-id
  - k8s-kind:KongPlugin
  - k8s-group:configuration.konghq.com
  - k8s-version:v1
services:
- connect_timeout: 60000
  host: httpbin..80.svc
  id: 84eb138f-d0f8-5200-a393-15b772b4b616
  name: .httpbin.80
  path: /
  port: 80
  protocol: http
  read_timeout: 60000
  retries: 5
  routes:
  - https_redirect_status_code: 426
    id: 0e0a5206-3e46-52e9-adab-943b1752a6c7
    name: .httpbin.httpbin..80
    path_handling: v0
    paths:
    - /httpbin
    preserve_host: true
    protocols:
    - http
    - https
    regex_priority: 0
    request_buffering: true
    response_buffering: true
    strip_path: false
    tags:
    - k8s-name:httpbin
    - k8s-kind:Ingress
    - k8s-group:networking.k8s.io
    - k8s-version:v1
  - https_redirect_status_code: 426
    id: a45af20a-d4fd-5695-a7b6-363eade3150c
    name: .httpbin-other.httpbin..80
    path_handling: v0
    paths:
    - /httpbin-diff
    preserve_host: true
    protocols:
    - http
    - https
    regex_priority: 0
    request_buffering: true
    response_buffering: true
    strip_path: false
    tags:
    - k8s-name:httpbin-other
    - k8s-kind:Ingress
    - k8s-group:networking.k8s.io
    - k8s-version:v1
  tags:
  - k8s-name:httpbin
  - k8s-kind:Service
  - k8s-version:v1
  write_timeout: 60000
- connect_timeout: 60000
  host: httpbin-other..80.svc
  id: 13b20b54-10d5-5fd5-b453-38bdd73beb42
  name: .httpbin-other.80
  path: /
  port: 80
  protocol: http
  read_timeout: 60000
  retries: 5
  routes:
  - https_redirect_status_code: 426
    id: f1c0dac6-309d-5939-8182-fdfbf92d7d0b
    name: .httpbin-other.httpbin-other..80
    path_handling: v0
    paths:
    - /httpbin-other
    preserve_host: true
    protocols:
    - http
    - https
    regex_priority: 0
    request_buffering: true
    response_buffering: true
    strip_path: false
    tags:
    - k8s-name:httpbin-other
    - k8s-kind:Ingress
    - k8s-group:networking.k8s.io
    - k8s-version:v1
  tags:
  - k8s-name:httpbin-other
  - k8s-kind:Service
  - k8s-version:v1
  write_timeout: 60000
upstreams:
- algorithm: round-robin
  name: httpbin..80.svc
  tags:
  - k8s-name:httpbin
  - k8s-kind:Service
  - k8s-version:v1
- algorithm: round-robin
  name: httpbin-other..80.svc
  tags:
  - k8s-name:httpbin-other
  - k8s-kind:Service
  - k8s-version:v1
